<resources>
    <string name="app_name">Spotify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_off">Logout</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="c_mara">Cámara</string>
    <string name="galer_a">Galería</string>
    <string name="log_in_myspotify">LOGIN MYSPOTIFY</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="user_create">USER CREATE</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_myspotify">Sign up myspotify</string>
    <string name="email">Email</string>
    <string name="password_1">Password</string>
    <string name="password_2">Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="imagesong">imageSong</string>
    <string name="profile">PROFILE</string>
    <string name="play">Play</string>
    <string name="home">HOME</string>
    <string name="favorite">FAVORITE</string>
    <string name="home_">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile_">Profile</string>
    <string name="_00_00">00:00</string>
    <string name="song_name">SONG NAME</string>
    <string name="retur">return</string>
    <string name="pass">pass</string>
    <string name="replay">replay</string>
    <string name="lista_vacia">Lista vacia</string>
    <string name="you_do_not_have_an_account">¿You do not have an account?</string>
    <string name="change_topic">Change topic</string>

</resources>