<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_marginTop="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp">

    <ImageView
        android:id="@+id/ivMyFavorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ic_favorite1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/favorites" />


    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagesong" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toBottomOf="@+id/tvPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>