<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="400dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/spotify"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/green_1"
        android:text="@string/log_in_myspotify"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:helperText="*Required"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_1"
        app:helperText="*Required"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_do_not_have_an_account"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCreate"/>

    <Button
        android:id="@+id/btCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/sign_up"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLog"/>

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/change_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml"  />

</androidx.constraintlayout.widget.ConstraintLayout>