<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSongName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.507" />

    <ImageView
        android:id="@+id/ivSongImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagesong" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCurTime"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="380dp"
        android:layout_height="16dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSongDuration"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar"/>

    <ImageView
        android:id="@+id/ivPlayPause"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_play_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:contentDescription="@string/play" />

    <ImageView
        android:id="@+id/ivReturnSong"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlayPause"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayPause"
        app:layout_constraintTop_toTopOf="@+id/ivPlayPause"
        app:layout_constraintVertical_bias="0.473"
        android:contentDescription="@string/retur" />

    <ImageView
        android:id="@+id/ivPassSong"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:src="@drawable/ic_skip"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlayPause"
        app:layout_constraintStart_toEndOf="@+id/ivPlayPause"
        app:layout_constraintTop_toTopOf="@+id/ivPlayPause"
        app:layout_constraintVertical_bias="0.473"
        android:contentDescription="@string/pass" />


    <ImageView
        android:id="@+id/ivMyFavorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_favorite1"
        app:layout_constraintBottom_toBottomOf="@+id/ivReturnSong"
        app:layout_constraintEnd_toStartOf="@+id/ivReturnSong"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivReturnSong"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/favorites" />

    <ImageView
        android:id="@+id/ivmyRepeat"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/ic_repeat"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivPassSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/ivPassSong"
        app:layout_constraintTop_toTopOf="@+id/ivPassSong"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/replay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="306dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="203dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>