<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_de_perfil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_mara"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/ivCamera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivGallery"/>

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galer_a"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/ivGallery"
            app:layout_constraintStart_toEndOf="@id/tvCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageView
            android:id="@+id/ivExit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCamera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivGallery"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivGallery"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"
            android:src="@drawable/unnamed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toEndOf="@+id/ivCamera"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>